css/style2.css
@font-face {
  font-family: Ogg;
  src: url("../assets/type/Ogg-Roman.otf");
}

@font-face {
  font-family: Pixel;
  src: url("../assets/type/PixelMaster.ttf");
}

/*cursor*/
body, html {
  cursor: url(https://rm-content.s3-accelerate.amazonaws.com/5727aec1db932f2f3ac1f556/957532/upload-e1250e30-139f-11e8-af61-ef72959cb5f6.png) 25 15, auto;
  height: 100%;
}

a:link {
  cursor: url(https://rm-content.s3-accelerate.amazonaws.com/5727aec1db932f2f3ac1f556/957532/upload-e1250e30-139f-11e8-af61-ef72959cb5f6.png) 25 15, pointer;
  height: 100%;
}


a:hover {
  cursor: url(https://rm-content.s3-accelerate.amazonaws.com/5727aec1db932f2f3ac1f556/957532/upload-da51a890-141a-11e8-b3e1-7b376df50f61.png) 25 15, pointer;
  height: 100%;
  font-family: Pixel;
  font-size: 23pt;
  line-height: .8;
}


body {
	margin: 0;
  padding: 35px 30% 40px 5%;
	height: 100vh;
  font-family: Pixel;
  font-size: 22pt;
}

a {
	color: #FF6D70;
  font-family: Helvetica Neue;
  font-size: 16pt;
}

h1, nav {
	font-weight: normal;
	font-size: 50pt;
	margin: 0;
  padding: 0;
}

h1 {
  font-family: Ogg;
  font-size: 50pt;
  line-height: 1.1;
  color: #FF6D70;
  margin-bottom: 20px;
}

nav, .contact {
	font-size: 20pt;
}

nav a {
	margin-left: 10px;
}

li {
  /*color: white;*/
  /*font-size: 18pt;*/
  margin-bottom: 2px;
}

p {
  margin: 10px 0;
}

span {
    position: relative;
    padding-bottom: 0;
    margin: -20px -4px 0 -4px;
    font-family: Ogg;
    font-size: 50pt;
    line-height: 1.1;
    color: #FF6D70;
}

ul {
  list-style-type: none;
  padding: 0;
}

.circle {
  margin-left: 20px;
  width: 30px;
  height: 30px;
  border-radius: 50%;
  z-index: 100;
}

.circle img, .circle p {
  display: none;
  max-height: 600px;
  z-index: 101;
}

.circle:hover img, .circle:hover p, .circle img:hover {
  display: block;
}

.cornerpic {
  width: 300px;
  height: auto;
  bottom: -50px;
  right: 30px;
  position: absolute;
}

.backbutton {
  font-size: 16pt;
  color: black;
  margin-bottom: -20px;
}

.blob {
  max-height: 100px;
  -webkit-animation:spin 4s linear infinite;
    -moz-animation:spin 4s linear infinite;
    animation:spin 4s linear infinite;
}

@-moz-keyframes spin { 100% { -moz-transform: rotate(360deg); } }
@-webkit-keyframes spin { 100% { -webkit-transform: rotate(360deg); } }
@keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }

.date {
  color: #FF6D70;
}

.datepic {
  color: #b1c6cc;
}

.img-caption {
  margin-left: 15px;
  padding: 20px;
  /*font-family: Helvetica Neue;*/
  width: 150px;
}

.navlink {
  font-family: Pixel;
  font-size: 20pt;
}

a.navlink:hover {
  font-family: Pixel;
  font-size: 20pt;  
  /*text-decoration: none;*/
}

.quote {
  font-family: Helvetica Neue;
  font-size: 16pt;
  margin-bottom: 35px;
}

.page-content {
  margin-top: 40px;
}

.pic-container {
  display: flex;
  align-items: center;
}

.pixel {
  font-family: Pixel;
  font-size: 81pt;
  letter-spacing: -6px;
}

.tiny {
  font-size: 11pt;
  margin-top: 35px;
}

.tinypic {
  max-height: 100px;
}

.strike {
  text-decoration: line-through;
}

/*.vibrate:hover {
  animation: shake 0.5s;
  animation-iteration-count: 1;
}*/

/*ROTATING CIRCLE TEXT*/

#container { margin: 0%; z-index: -10;}

#circle { position: relative; width: 100%; padding-bottom: 100%; overflow: hidden; }

#circle text { font-family: 'Helvetica Neue', Arial; font-size: 16px; }

#circle svg { position: absolute; left: 0; top: 10%; width: 100%; height: 300px;

  -webkit-animation-name: rotate;
     -moz-animation-name: rotate;
      -ms-animation-name: rotate;
       -o-animation-name: rotate;
          animation-name: rotate;
  -webkit-animation-duration: 7s;
     -moz-animation-duration: 7s;
      -ms-animation-duration: 7s;
       -o-animation-duration: 7s;
          animation-duration: 7s;
  -webkit-animation-iteration-count: infinite;
     -moz-animation-iteration-count: infinite;
      -ms-animation-iteration-count: infinite;
       -o-animation-iteration-count: infinite;
          animation-iteration-count: infinite;
  -webkit-animation-timing-function: linear;
     -moz-animation-timing-function: linear;
      -ms-animation-timing-function: linear;
       -o-animation-timing-function: linear;
          animation-timing-function: linear;

}

@-webkit-keyframes rotate {
    from { -webkit-transform: rotate(360deg); }
    to { -webkit-transform: rotate(0); }
}
@-moz-keyframes rotate {
    from { -moz-transform: rotate(360deg); }
    to { -moz-transform: rotate(0); }
}
@-ms-keyframes rotate {
    from { -ms-transform: rotate(360deg); }
    to { -ms-transform: rotate(0); }
}
@-o-keyframes rotate {
    from { -o-transform: rotate(360deg); }
    to { -o-transform: rotate(0); }
}
@keyframes rotate {
    from { transform: rotate(360deg); }
    to { transform: rotate(0); }
}

/*@keyframes shake {
  0% { transform: translate(1px, 1px) rotate(0deg); }
  10% { transform: translate(-1px, -2px) rotate(-1deg); }
  20% { transform: translate(-3px, 0px) rotate(1deg); }
  30% { transform: translate(3px, 2px) rotate(0deg); }
  40% { transform: translate(1px, -1px) rotate(1deg); }
  50% { transform: translate(-1px, 2px) rotate(-1deg); }
  60% { transform: translate(-3px, 1px) rotate(0deg); }
  70% { transform: translate(3px, 1px) rotate(-1deg); }
  80% { transform: translate(-1px, -1px) rotate(1deg); }
  90% { transform: translate(1px, 2px) rotate(0deg); }
  100% { transform: translate(1px, -2px) rotate(-1deg); }
}
*/
@keyframes shake {
  0% { transform: translate(1px, 0px); }
  10% { transform: translate(-1px, 0px); }
  20% { transform: translate(-3px, 0px); }
  30% { transform: translate(3px, 0px); }
  40% { transform: translate(1px, 0px); }
  50% { transform: translate(-1px, 0px); }
  60% { transform: translate(-3px, 0px); }
  70% { transform: translate(3px, 0px); }
  80% { transform: translate(-1px, 0px); }
  90% { transform: translate(1px, 0px); }
  100% { transform: translate(1px, 0px); }
}

